--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/dalSara/Show-doProto1/issues"
   },
-  "homepage": "https://github.com/dalSara/Show-doProto1#readme"
+  "homepage": "https://github.com/dalSara/Show-doProto1#readme",
+  "devDependencies": {
+    "gulp-cli": "^1.2.2",
+    "gulp-sass": "^3.1.0"
+  }
 }
