--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/dalSara/Show-doProto1#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
     "gulp-sass": "^3.1.0"
   }
